Clean up and reduce file-system interactions of Tycho-Mappings